fixed scrollbar and compass for dark mode

--- a/client/style.css
+++ b/client/style.css
@@ -122,7 +122,7 @@ strong {
 }
 
 [data-direction-exists="true"] {
-  color: black;
+  color: white;
 }
 
 .room-mob {
@@ -174,4 +174,18 @@ strong {
 #spells-header,
 #worn-inventory-header {
   text-align: center;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(255,255,255,0.3); 
+  /* border-radius: 10px; */
+}
+
+::-webkit-scrollbar-thumb {
+  /* border-radius: 10px; */
+  -webkit-box-shadow: inset 0 0 6px rgba(255,255,255,0.5); 
 }
